Correct wrong width size + project transition

--- a/src/components/css/experience-card.module.css
+++ b/src/components/css/experience-card.module.css
@@ -31,7 +31,7 @@
 
 .cardFold {
   width: 86vw;
-  margin: 20px 2vw;
+  margin: 20px 0px;
   transition-delay: var(--delay-close1);
   transition-duration: var(--duration-close1);
 }
@@ -148,6 +148,7 @@
     width: 50vw;
     min-width: 360px;
     max-width: 550px;
+    margin: 20px 2vw;
     padding-left: 15px;
   }
 
