--- a/src/components/css/nav-bar.module.css
+++ b/src/components/css/nav-bar.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
 
-  width: 100vw;
+  width: 100%;
   height: var(--header-height);
   background-color: var(--fg-color);
   user-select: none;
