--- a/src/components/css/projects.module.css
+++ b/src/components/css/projects.module.css
@@ -15,7 +15,7 @@
 
   clip-path: polygon(0 100px, 100% 0, 100% calc(100% - 100px), 0 100%);
   background-color: var(--fg-color);
-  transition: height 0.4s ease;
+  transition: height 0.3s linear 0s;
 }
 
 .extendedBackground {
@@ -52,6 +52,7 @@
   margin-top: 0px;
   margin-bottom: 18px;
   color: white;
+  user-select: none;
 }
 
 .projectScreen {
@@ -64,6 +65,15 @@
   justify-content: center;
   background-color: var(--bg-color);
   box-shadow: inset 0 0px 14px 0px rgba(0, 0, 0, 0.8);
+  transition: opacity 0.2s linear 0.2s;
+}
+
+.projectScreenHide {
+  opacity: 0;
+  width: 0px;
+  height: 0px;
+  z-index: -1;
+  transition: opacity 0s linear 0s;
 }
 
 .menu {
